<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Here you can add the activity you did."
        android:textSize="15dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryTextLight"
        android:background="@color/colorAccent"/>

    <!-- get date -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/text_choose_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_choose_date" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="date"
                android:hint="@string/text_hint_date"
                android:text="@string/text_hint_date"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_activity_date"
                android:layout_weight="1"
                android:id="@+id/btn_date" />

        </LinearLayout>

    </LinearLayout>

    <!-- get time -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/text_choose_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_choose_time" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_of_activity"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/text_hint_time"
            android:text="@string/text_hint_time"/>

    </LinearLayout>


    <!-- choose activity -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/text_choose_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_choose_activity" />

        <Spinner
            android:id="@+id/activity_spinner"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/button_save_activity"
            android:text="@string/button_save_activity" />

    </LinearLayout>

</LinearLayout>