<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="se.bolzyk.gohealthy.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Here you can set goals for each activity."
        android:textSize="15dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryTextLight"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp" >

        <!-- Goal Walking -->
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="25dp"
            android:text="Activity Goal Per Month For Walking in hours" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goal_walking"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="number"
            android:hint="@string/text_hint_goal"
            android:text="@string/text_hint_goal"/>


        <!-- Goal Running -->
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="Activity Goal Per Month For Running in hours" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goal_running"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="number"
            android:hint="@string/text_hint_goal"
            android:text="@string/text_hint_goal"/>


        <!-- Goal Weight Training-->
        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="Activity Goal Per Month For Weight Training in hours" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goal_weight_training"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="number"
            android:hint="@string/text_hint_goal"
            android:text="@string/text_hint_goal"/>


        <!-- Goal Group Workout -->
        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="Activity Goal Per Month For Group Workout in hours" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goal_group_workout"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="number"
            android:hint="@string/text_hint_goal"
            android:text="@string/text_hint_goal"/>


        <!-- safe and delete -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:id="@+id/button_save_setting"
            android:text="@string/button_save_setting"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:id="@+id/button_delete_all"
            android:text="@string/button_delete_all"/>

    </LinearLayout>

</RelativeLayout>
